[refactor]: add currentStreakStartDate in StreakReportResponse